# taskflow-api

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy-production.yml
backend/src/: main.py
backend/src/core/: settings.py
backend/src/core/llm/: cost.py  provider.py  router.py
backend/src/db/: engine.py  repo.py
backend/src/orchestration/: runtime.py
backend/src/orchestration/contracts/: registry.py
backend/src/orchestration/executor/: service.py
backend/src/orchestration/monitor/: service.py
backend/src/orchestration/planner/: service.py
backend/src/routers/: health.py  runs.py  workflows.py
backend/src/schemas/: runs.py
backend/src/utils/: deps.py
docs/: assumptions.md
docs/_templates/: API_ENVELOPE_REFERENCE.md  ARCHITECTURE_TEMPLATE.md  COST_LEDGER_SCHEMA.sql  DECISIONS_TEMPLATE.md  RUNBOOK_TEMPLATE.md  WEB_CLIENT_REFERENCE.md
src/: main.py
src/core/: settings.py
src/core/llm/: cost.py  provider.py  router.py
src/db/: engine.py  models.py  repo.py
src/orchestration/: runtime.py
src/orchestration/contracts/: models.py  registry.py
src/orchestration/events/: broker.py
src/orchestration/executor/: service.py
src/orchestration/monitor/: service.py
src/orchestration/planner/: service.py
src/orchestration/reflection/: service.py
src/orchestration/templates/: defaults.py
src/routers/: health.py  runs.py  workflows.py
src/schemas/: events.py  runs.py  workflows.py
src/utils/: deps.py
tests/: conftest.py  test_main.py
tests/e2e/: test_main.py
tests/integration/: test_provider_runtime.py  test_runs_lifecycle.py
tests/unit/: test_contracts.py  test_retry_policy.py  test_router.py
(+2 files in other folders)
